--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.3.2
   http: ^1.2.2
   dio: ^5.6.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
